--- a/css/main.css
+++ b/css/main.css
@@ -5,6 +5,7 @@
   border: none;
   text-decoration: none;
   list-style: none;
+  color: #FFFFFF;
 }
 
 body {
@@ -27,6 +28,8 @@ body {
   opacity: 0.4;
 }
 
+
+
 .navbar {
   display: flex;
   justify-content: center;
@@ -39,8 +42,8 @@ body {
 .navbar ul {
   display: flex;
   flex-direction: row;
-  justify-content: space-evenly;
-  width: 80%;
+  justify-content: center;
+  width: 50%;
   margin: auto;
 }
 
@@ -70,6 +73,12 @@ li:hover {
   }
 }
 
+#cadykd-logo {
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+	width: 50%;
+}
 
 #backgroundImageAttribution {
 	align-items: center;
