--- a/css/main.css
+++ b/css/main.css
@@ -28,8 +28,6 @@ body {
   opacity: 0.4;
 }
 
-
-
 .navbar {
   display: flex;
   justify-content: center;
@@ -81,9 +79,9 @@ li:hover {
 }
 
 #backgroundImageAttribution {
-	align-items: center;
-    display: flex;
-    flex-direction: row;
+	position: absolute;
+	bottom: 0;
+	left: 0;
     border-radius: 8px;
     bottom: 16px;
     color: #FFFFFF;
