--- a/css/snake1.css
+++ b/css/snake1.css
@@ -1,14 +1,9 @@
-body {
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	margin: 0;
-}
-
 #snake-board {
+	align-self: center;
 	background-color: #000000;
 	width: 75vmin;
 	height: 75vmin;
+	border: 1px solid #000000;
 	display: grid;
 	grid-template-rows: repeat(21, 1fr);
 	grid-template-columns: repeat(21, 1fr);
