--- a/css/main.css
+++ b/css/main.css
@@ -164,7 +164,7 @@ li:hover {
 
 input[type=number] {
 	width: 100px;
-	color: black;
+	color: #000000;
 	margin-left: 5px;
 	height: 1.2rem;
 }
@@ -174,4 +174,40 @@ button {
 	color: black;
 	justify-content: center;
 	margin-top: 2px;
+}
+
+#form {
+	display: flex;
+	flex-direction: column;
+	width: 50%;
+}
+
+#form input {
+	width: 200px;
+	color: #000000;
+	margin: 5px;
+}
+
+#form-output {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	width: 50%;
+}
+
+#emojipicker {
+	width: 250px;
+	color: #000000;
+	margin: 5px;
+}
+
+table {
+	width: 50%;
+}
+
+table, th, td {
+	border: 2px solid;
+	border-color: #FFFFFF;
+	border-collapse: collapse;
+	text-align: center;
 }
